# wenyi

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: build.yml  tests.yml
apps/api/: pyproject.toml
apps/api/tests/: test_export_routes.py  test_project_routes.py  test_strategies.py
apps/api/wenyi_api/: __init__.py  config.py  dal.py  emitters.py  main.py  paths.py  schemas.py  storage_pg.py  strategies.py
apps/api/wenyi_api/db/: __init__.py  pool.py  schema.sql
apps/api/wenyi_api/routers/: __init__.py  chapters.py  events.py  export.py  glossary.py  health.py  projects.py  review.py  strategies.py  style.py  ws.py
apps/api/wenyi_api/workers/: __init__.py  tasks.py
apps/web/: index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
deploy/: docker-compose.yml
docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  nginx.conf
docs/: configuration.md  pipeline.md  usage.md  web.md
docs/zh/: README.md  configuration.md  pipeline.md  usage.md
prompts/: README.md
tests/: fake_llm.py  sample_data.py  test_assemble.py  test_bilingual.py  test_cli.py  test_config.py  test_glossary.py  test_glossary_agents.py  test_ingest.py  test_language_targets.py  test_llm.py  test_locales.py  test_newfeatures.py  test_orchestrator.py  test_pdf_support.py  test_review_polish.py  test_translator.py  test_usage.py  test_web.py
trans_novel/: __init__.py  cli.py  config.py
trans_novel/agents/: __init__.py  analyzer.py  (+9 more)
(+71 files in other folders)
