[project]
name = "wenyi"
version = "0.2.0"
description = "文译（Wenyi）：基于 AI 的长篇小说翻译平台 — monorepo 根"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/core", "packages/cli", "apps/api"]

[tool.uv.sources]
wenyi-core = { workspace = true }
wenyi-cli = { workspace = true }
wenyi-api = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/core/tests", "apps/api/tests"]
pythonpath = ["packages/core", "packages/cli"]
