[project]
name = "wenyi-api"
version = "0.2.0"
description = "文译 Web API：FastAPI + Postgres + Arq（Web 模式走 PostgresStorage）"
requires-python = ">=3.10"
dependencies = [
    "wenyi-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "arq>=0.26",
    "redis>=5.0",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
wenyi-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wenyi_api"]
